--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "next": "12.0.4",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "sass": "^1.44.0"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "express": "^4.17.2"
   }
 }
